[package]
name = "crafting-interpreters"
version = "0.1.0"
authors = ["Zephyr Shannon <earthlingzephyr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
paw = "1.0.0"
structopt = { version = "0.3.21", features = ["paw"] }
